# chicken-shooter

./: .gitignore  README.md
backend/: README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/src/: App.css  App.jsx  GameCanvas.jsx  Leaderboard.jsx
